--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <img src="logo-header.png">
             </div>
             <div class="header-items">
-                <p><a href="https://google.com" class="header-item">cursos</a></p>
-                <p><a href="https://google.com" class="header-item">blog</a></p>
-                <p><a href="https://google.com" class="header-item">contato</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
             </div>
         </div>
     <div>        
