--- a/Contato.html
+++ b/Contato.html
@@ -18,12 +18,12 @@
     <div id="header">
         <div class="header-grid">
             <div class="logo-header">
-                <img src="/img/logo-header.png">
+                <img src="logo-header.png">
             </div>
             <div class="header-items">
-                <p><a href="https://google.com" class="header-item">cursos</a></p>
-                <p><a href="https://google.com" class="header-item">blog</a></p>
-                <p><a href="https://google.com" class="header-item">contato</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
             </div>
         </div>
     <div>   
@@ -41,19 +41,19 @@
                 <button>enviar</button>
             </div>
             <div>
-                <img src="/img/ilustra-contato.png" alt="">
+                <img src="ilustra-contato.png" alt="">
             </div>
         </div>
     </main>
     <div id="footer">
         <div class="footer-grid">
             <div class="logo-footer">
-                <img src="/img/logo-footer.png">
+                <img src="logo-footer.png">
             </div>
             <div class="footer-items">
-                <p><a href="https://google.com" class="header-item">cursos</a></p>
-                <p><a href="https://google.com" class="header-item">blog</a></p>
-                <p><a href="https://google.com" class="header-item">contato</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
             </div>
             <div>
                 <button class="footer-botão1">quero ser prof</button>
