--- a/Cursos.html
+++ b/Cursos.html
@@ -20,12 +20,12 @@
     <div id="header">
         <div class="header-grid">
             <div class="logo-header">
-                <img src="/img/logo-header.png">
+                <img src="logo-header.png">
             </div>
             <div class="header-items">
-                <p><a href="https://google.com" class="header-item">cursos</a></p>
-                <p><a href="https://google.com" class="header-item">blog</a></p>
-                <p><a href="https://google.com" class="header-item">contato</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
             </div>
         </div>
     <div>        
@@ -41,7 +41,7 @@
             <tr>
                 <td class="cell">
                     <img
-                        src="/img/ilustra-poupando.png">
+                        src="ilustra-poupando.png">
                     <div>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
@@ -53,7 +53,7 @@
                 </td>
                 <td class="cell">
                     <img
-                        src="/img/ilustra-investimento.png">
+                        src="ilustra-investimento.png">
                     <div>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
@@ -64,7 +64,7 @@
                     </div>
                 </td>
                 <td class="cell">                   
-                        <img src="/img/ilustra-independencia.png">
+                        <img src="ilustra-independencia.png">
                     <div>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
@@ -89,12 +89,12 @@
     <div id="footer">
         <div class="footer-grid">
             <div class="logo-footer">
-                <img src="/img/logo-footer.png">
+                <img src="logo-footer.png">
             </div>
             <div class="footer-items">
-                <p><a href="https://google.com" class="header-item">cursos</a></p>
-                <p><a href="https://google.com" class="header-item">blog</a></p>
-                <p><a href="https://google.com" class="header-item">contato</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
             </div>
             <div>
                 <button class="footer-botão1">quero ser prof</button>
