--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="banner-parte1">
                 <p class="banner-titulo">Educação Financeira é tudo de bom</p>
                 <p class="banner-texto">Vem comigo que te mostro por onde começar</p>
-                <button class="botão-banner"> <a class="link-botão-banner" href="https://google.com">Quero saber mais</button></a>
+                <button class="botão-banner"> <a class="link-botão-banner" href="https://diegoengmec.github.io/Desafio1GamaAcademy/Post.html">Quero saber mais</button></a>
 
             </div>
 
@@ -58,7 +58,7 @@
             <img class="curso1-imagem" src="ilustra-poupando.png">
             <h3 class="titulo-curso1">Investimento para iniciantes</h3>
             <p class="curso1-texto">Duis aute irure dolor in reprehenderit in volupatate velit es se cilium dolore eu fugiat nulla parialtur</p>
-            <button class="curso1-botão"><a class="link-curso-botão1" href="https://google.com">Quero saber mais</button></a>
+            <button class="curso1-botão"><a class="link-curso-botão1" href="https://diegoengmec.github.io/Desafio1GamaAcademy/Curso.html">Quero saber mais</button></a>
 
         </div>
 
@@ -66,14 +66,14 @@
             <img class="curso2-imagem" src="ilustra-investimento.png">
             <h4 class="titulo-curso2">Poupando e Rendendo</h4>
             <p class="curso2-texto">Duis aute irure dolor in reprehenderit in volupatate velit es se cilium dolore eu fugiat nulla parialtur</p>
-            <button class="curso2-botão"><a class="link-curso-botão2" href="https://google.com">Quero saber mais</button></a>
+            <button class="curso2-botão"><a class="link-curso-botão2" href="https://diegoengmec.github.io/Desafio1GamaAcademy/Curso.html">Quero saber mais</button></a>
         </div>    
             
         <div id="curso3">
             <img class="curso3-imagem" src="ilustra-independencia.png">
             <h5 class="titulo-curso3">Indepência Financeira</h5>
             <p class="curso3-texto">Duis aute irure dolor in reprehenderit in volupatate velit es se cilium dolore eu fugiat nulla parialtur</p>
-            <button class="curso3-botão"><a class="link-curso-botão3" href="https://google.com">Quero saber mais</button></a>
+            <button class="curso3-botão"><a class="link-curso-botão3" href="https://diegoengmec.github.io/Desafio1GamaAcademy/Curso.html">Quero saber mais</button></a>
 
         </div>
 
@@ -139,7 +139,7 @@
         </div>
 
         <div>
-            <button class="conteudo-botão"><a class="link-conteudo-botão" href="https://google.com">Quero saber mais</button></a>
+            <button class="conteudo-botão"><a class="link-conteudo-botão" href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html">Quero saber mais</button></a>
 
         </div>
     
@@ -152,9 +152,9 @@
                 <img src="logo-footer.png">
             </div>
             <div class="footer-items">
-                <p><a href="https://google.com" class="header-item">cursos</a></p>
-                <p><a href="https://google.com" class="header-item">blog</a></p>
-                <p><a href="https://google.com" class="header-item">contato</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
             </div>
             <div>
                 <button class="footer-botão1">quero ser prof</button>
