--- a/Blog.html
+++ b/Blog.html
@@ -25,12 +25,12 @@
     <div id="header">
         <div class="header-grid">
             <div class="logo-header">
-                <img src="/img/logo-header.png">
+                <img src="logo-header.png">
             </div>
             <div class="header-items">
-                <p><a href="https://google.com" class="header-item">cursos</a></p>
-                <p><a href="https://google.com" class="header-item">blog</a></p>
-                <p><a href="https://google.com" class="header-item">contato</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
             </div>
         </div>
     <div>        
@@ -46,7 +46,7 @@
             </div>
 
             <div class="banner-imagem">
-               <img src="/img/ilustra-blog.png">
+               <img src="ilustra-blog.png">
             </div>
         </div>
 
@@ -91,12 +91,12 @@
         <div id="footer">
             <div class="footer-grid">
                 <div class="logo-footer">
-                    <img src="/img/logo-footer.png">
+                    <img src="logo-footer.png">
                 </div>
                 <div class="footer-items">
-                    <p><a href="https://google.com" class="header-item">cursos</a></p>
-                    <p><a href="https://google.com" class="header-item">blog</a></p>
-                    <p><a href="https://google.com" class="header-item">contato</a></p>
+                    <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                    <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                    <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
                 </div>
                 <div>
                     <button class="footer-botão1">quero ser prof</button>
