--- a/Curso.html
+++ b/Curso.html
@@ -22,12 +22,12 @@
     <div id="header">
         <div class="header-grid">
             <div class="logo-header">
-                <img src="/img/logo-header.png">
+                <img src="logo-header.png">
             </div>
             <div class="header-items">
-                <p><a href="https://google.com" class="header-item">cursos</a></p>
-                <p><a href="https://google.com" class="header-item">blog</a></p>
-                <p><a href="https://google.com" class="header-item">contato</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
             </div>
         </div>
     <div>   
@@ -41,7 +41,7 @@
                 explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
                 consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
             </p>
-            <img src="/img/ilustra-poupando.png" style="width: 250px; padding: 30px;">
+            <img src="ilustra-poupando.png" style="width: 250px; padding: 30px;">
         </div>
     </div>
 
@@ -52,7 +52,7 @@
             <table>
                 <tr>
                     <td class="cell">
-                        <img src="/img/Captura de tela 2023-02-17 103501.png">
+                        <img src="Captura de tela 2023-02-17 103501.png">
                         <div>
                             <h2 style="color: #FF4081;">Aula 1</h2>
                             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
@@ -64,7 +64,7 @@
                         </div>
                     </td>
                     <td class="cell">
-                        <img src="/img/Captura de tela 2023-02-17 103501.png">
+                        <img src="Captura de tela 2023-02-17 103501.png">
                         <div>
                             <h2 style="color: #FF4081;">Aula 2</h2>
                             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
@@ -77,7 +77,7 @@
                         </div>
                     </td>
                     <td class="cell">
-                        <img src="/img/Captura de tela 2023-02-17 103501.png">
+                        <img src="Captura de tela 2023-02-17 103501.png">
                         <div>
                             <h2 style="color: #FF4081;">Aula 3</h2>
                             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
@@ -104,12 +104,12 @@
         <div id="footer">
             <div class="footer-grid">
                 <div class="logo-footer">
-                    <img src="/img/logo-footer.png">
+                    <img src="logo-footer.png">
                 </div>
                 <div class="footer-items">
-                    <p><a href="https://google.com" class="header-item">cursos</a></p>
-                    <p><a href="https://google.com" class="header-item">blog</a></p>
-                    <p><a href="https://google.com" class="header-item">contato</a></p>
+                    <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Cursos.html" class="header-item">cursos</a></p>
+                    <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Blog.html" class="header-item">blog</a></p>
+                    <p><a href="https://diegoengmec.github.io/Desafio1GamaAcademy/Contato.html" class="header-item">contato</a></p>
                 </div>
                 <div>
                     <button class="footer-botão1">quero ser prof</button>
